frontend/test/should_fail/keepOneForEach_match_class_accumulation_entity_equals_entity.grg
match class mc
{
	def var i:int;
	def var j:int;
} \ keepOneForEach<i>Accumulate<i>By<sum>
